<?xml version="1.0"?>
<package>
  <name>base_robot</name>
  <version>0.0.0</version>
  <description>Package for Turtlebot2i</description>

  <maintainer email="aaa@aaa.com">AAA</maintainer>
  <license>AAA</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
