<?xml version="1.0"?>
<package>
  <name>base_robot</name>
  <version>0.0.1</version>
  <description>Package for Turtlebot2i</description>

  <maintainer email="aaa@aaa.com">AAA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>kobuki_msgs</build_depend>
    <build_depend>kobuki_random_walker</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>kobuki_msgs</run_depend>
    <run_depend>kobuki_random_walker</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
  </export>
</package>
