<package format="2">
  <name>turtlebot_all</name>
  <version>0.0.1</version>
  <description>
    Package to bring-up all turtlebot functionalities
  </description>
  <maintainer email="amadeu.nascimento.junior@ericsson.com"> Amadeu Nascimento </maintainer>
  <maintainer email="alberto.hata@ericsson.com"> Alberto Hata </maintainer>
  <license> GPL </license>

  <buildtool_depend> catkin </buildtool_depend>

  <exec_depend>phantomx_pincher_arm_description</exec_depend>
  <exec_depend>phantomx_pincher_arm_vrep_controller</exec_depend>
  <exec_depend>phantomx_pincher_arm_moveit</exec_depend>
  <exec_depend>base_robot</exec_depend>
  
  <export> <metapackage /> </export>

</package>
