<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2i_edge</name>
  <version>0.0.0</version>
  <description>The edge computing package for turtlebot2i</description>

  <license>Apache</license>
  <maintainer email="alberto.hata@ericsson.com">Alberto Hata</maintainer>
  <author email="franco.ruggeri@ericsson.com">Franco Ruggeri</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>turtlebot2i_scene_graph</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
