<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2i_scene_graph</name>
  <version>0.0.0</version>
  <description>The scene graph generator package for turtlebot2i</description>

  <maintainer email="alberto.hata@ericsson.com">Alberto Hata</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
